--- a/ACME_HappinessSurvey2020_final.ipynb
+++ b/ACME_HappinessSurvey2020_final.ipynb
@@ -3010,10 +3010,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KgvcDxpDEJNe",
-        "outputId": "1a27c470-5848-4fd0-a943-2d4c08d02604"
+        "outputId": "ed269988-8ef8-40a7-f3ab-c7e41a4bd9c7"
       },
       "id": "KgvcDxpDEJNe",
-      "execution_count": 54,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -3021,11 +3021,11 @@
           "text": [
             "  Feature  Selected  Ranking\n",
             "0      X1      True        1\n",
-            "4      X5     False        2\n",
-            "1      X2     False        3\n",
+            "3      X4     False        2\n",
+            "4      X5     False        3\n",
             "2      X3     False        4\n",
             "5      X6     False        5\n",
-            "3      X4     False        6\n"
+            "1      X2     False        6\n"
           ]
         }
       ]
@@ -3638,11 +3638,13 @@
         "  - Using **NearestCentroid**, the following **recall(0) results** were observed:  \n",
         "    - **All features included** → **58.3% recall(0)**  \n",
         "    - **Removed weakest feature (X4)** → **75% recall(0)**  \n",
-        "    - **Further removals of features using the RFE ranking** → **50%, 50% 66.7%, 66.7%% recall(0)**  \n",
+        "    - **Further removals of features using the RFE ranking** → **50%, 50% 66.7%, 66.7% recall(0)**  \n",
+        "    - **Most Important Feature: X1 (My order was delivered on time)** → **83% recall(0)**  \n",
         "    - Confusion matrices confirm these results.  \n",
         "\n",
         "- **Key Insight**:  \n",
-        "  - The most **weakest feature** needed to **accurately predict unhappy customers** is **X6 (Ease of App Usage)**.  \n",
+        "  - The **most significant feature** for predicting unhappy customers is **X1 (My order was delivered on time), achieving 83% recall(0)**. This means that **on-time delivery plays the most critical role in determining customer satisfaction.**  \n",
+        "  - The weakest features **X2, X6, and X3** can be removed to improve model performance.  \n",
         "\n",
         "---\n",
         "\n",
@@ -3655,11 +3657,9 @@
         "- **Models Considered**:  \n",
         "  - Logistic Regression, Decision Trees, Random Forest, XGBoost, and Ensemble Models (Voting and Stacking).  \n",
         "  - Using **Hyperopt** for optimal performance.  \n",
-        "  -**X6:** The app makes ordering easy for me is the weakest feature, so it can be removed for better feedback\n",
-        "\n",
+        "  - **X6, X2, and X3 were identified as the weakest features and can be removed for better predictive accuracy.**  \n",
         "\n",
         "#### **Final Model: NearestCentroid is the Best Model**  \n",
-        "\n",
         "\n",
         "---\n",
         "\n",
@@ -3667,8 +3667,7 @@
         "- **Proactively identify unhappy customers** and address their concerns.  \n",
         "- **Optimize delivery operations** based on data-driven insights.  \n",
         "- **Improve overall customer experience** leading to increased retention and brand loyalty.  \n",
-        "- **Questionnaires can be streamlined** to achieve the same expected results.\n",
-        "\n",
+        "- **Questionnaires can be streamlined** to achieve the same expected results.  \n",
         "\n",
         "This machine learning project provides a structured approach to **predicting dissatisfaction**, allowing the company to take corrective measures and enhance customer satisfaction at scale. 🚀  \n",
         "\n",
